Fix styling for dates, increase horizontal spacing in PostsList

--- a/src/components/Post/Date/Date.module.scss
+++ b/src/components/Post/Date/Date.module.scss
@@ -1,5 +1,6 @@
 .component {
-  color: var(--faded-text);
-  width: 80px;
   font-size: 15px;
+  font-variant-numeric: proportional-nums;
+  color: var(--faded-text);
+  width: 88px;
 }
