--- a/src/components/PostsList/PostsList.module.scss
+++ b/src/components/PostsList/PostsList.module.scss
@@ -10,7 +10,7 @@
 .date,
 .label {
   flex-shrink: 0;
-  margin-right: 10px;
+  margin-right: 15px;
 }
 
 .label {
